fix taskbar desktop gap

--- a/layout.css
+++ b/layout.css
@@ -478,7 +478,7 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
-  padding-bottom: 28px;
+  padding-bottom: calc(28 / 11 * 1em);
   display: grid;
   grid-auto-flow: column;
   grid-template-rows: repeat(auto-fill, var(--desktop-item-size));
